deploy: 1cc3f793d9f0e5336e10f601bec3e472bf997336

--- a/projects/more1/more2/index.html
+++ b/projects/more1/more2/index.html
@@ -29,10 +29,22 @@ page 3 of my projects
 </div>
 <nav>
 <ul>
+<li>
+<a href=#rp2040-dev-board> RP2040 Dev Board</a>
+</li>
 </ul>
 </nav>
 </header>
 <div id=main>
+<article id=rp2040-dev-board>
+<h2 class=major> RP2040 Dev Board</h2>
+<span class="image main"><img src alt></span>
+<p>Link to project: <a href=https://github.com/DhruvaG2000/RP2040_Dev_Board>RP2040_Dev_Board</a></p>
+<p>
+<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/picoDevR0_firstPreview.png alt></span>
+<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/rp2040-pinout.png alt></span>
+</p>
+</article>
 </div>
 <footer id=footer>
 <p class=copyright>&copy; <a href=https://github.com/dhruvag2000>2021 Dhruva Gole</p>
