deploy: bb61d88cef590bc9e44a37bfe57dcaf5df4c062d

--- a/projects/more1/index.html
+++ b/projects/more1/index.html
@@ -31,12 +31,28 @@ page 2 of my projects
 <ul>
 <li><a href=https://dhruvagole.tech/projects/more1/more2/>more projects</a></li>
 <li>
+<a href=#smartduino>SmartDuino</a>
+</li>
+<li>
 <a href=#weather-monitor>Weather Monitor</a>
 </li>
 </ul>
 </nav>
 </header>
 <div id=main>
+<article id=smartduino>
+<h2 class=major>SmartDuino</h2>
+<span class="image main"><img src alt></span>
+<p>This is an Open Source Project that aims to provide a Smart Sensor Hub with an extremely intuitive user interface using gestures and OLED Display. It flaunts amazing features like:</p>
+<ul>
+<li>OLED Module for high contrast and low power consumption Display Interface.</li>
+<li>Air Gestures to control music playback and volume (No more BUTTONS!)</li>
+<li>Air Humidity and Temperature Sensing.</li>
+<li>Fun Games using motion detection.</li>
+<li>BLE for low power wireless connectivity with your smartphone.</li>
+</ul>
+<p>Link to Project: <a href=https://github.com/DhruvaG2000/SmartDuinoSensorHub>SmartDuinoSensorHub</a></p>
+</article>
 <article id=weather-monitor>
 <h2 class=major>Weather Monitor</h2>
 <span class="image main"><img src alt></span>
