deploy: 41790361738f9ebbbeff4875a35fba4c6dd7bb5d

--- a/projects/opensource/index.html
+++ b/projects/opensource/index.html
@@ -62,6 +62,12 @@ A summary of all my Open Source Contributions
 </ul>
 <h2 id=other>Other</h2>
 <ul>
+<li><strong>Yocto Project</strong>: scripts/checklayer/common.py:
+<ul>
+<li><a href="https://lists.openembedded.org/g/openembedded-core/message/158966?p=%2C%2C%2C20%2C0%2C0%2C0%3A%3Arecentpostdate%2Fsticky%2C%2CBug%2311131%2C20%2C2%2C0%2C87397246">Test case to review if the README file specifies the maintainer, specifies the word patch, and contains an email address</a></li>
+<li>Fixed a minor grammatical error</li>
+</ul>
+</li>
 <li>Update <strong>Zephyr RTOS</strong> Documentation: <a href=https://github.com/zephyrproject-rtos/zephyr/pull/38542>boards: Arduino Nano BLE 33: update documentation PR#38542</a></li>
 <li>Writing a blog for SRA VJTI: <a href=https://github.com/SRA-VJTI/blog/pull/1>gdb-for-noobs PR#1</a>.</li>
 <li>Added instructions for using an ADC library for UncleRus/esp-idf-lib in <a href=https://github.com/UncleRus/esp-idf-lib/pull/163>PR#163</a>.</li>
