--- a/projects/opensource/index.html
+++ b/projects/opensource/index.html
@@ -62,6 +62,7 @@ A summary of all my Open Source Contributions
 </ul>
 <h2 id=other>Other</h2>
 <ul>
+<li><strong>Rizin</strong>: <a href=https://github.com/rizinorg/rizin/pull/2220>Add power/exponent to math operations #2220</a></li>
 <li><strong>Yocto Project</strong>: scripts/checklayer/common.py:
 <ul>
 <li><a href="https://lists.openembedded.org/g/openembedded-core/message/158966?p=%2C%2C%2C20%2C0%2C0%2C0%3A%3Arecentpostdate%2Fsticky%2C%2CBug%2311131%2C20%2C2%2C0%2C87397246">Test case to review if the README file specifies the maintainer, specifies the word patch, and contains an email address</a></li>
